src/snapshots/prql__parser__parse_to_pest_tree-6.snap
---
source: src/parser.rs
assertion_line: 141
expression: "parse_to_pest_tree(r#\"[a, b, c,]\"#, Rule::list)"

---
Ok(
    [
        Pair {
            rule: list,
            span: Span {
                str: "[a, b, c,]",
                start: 0,
                end: 10,
            },
            inner: [
                Pair {
                    rule: ident,
                    span: Span {
                        str: "a",
                        start: 1,
                        end: 2,
                    },
                    inner: [],
                },
                Pair {
                    rule: ident,
                    span: Span {
                        str: "b",
                        start: 4,
                        end: 5,
                    },
                    inner: [],
                },
                Pair {
                    rule: ident,
                    span: Span {
                        str: "c",
                        start: 7,
                        end: 8,
                    },
                    inner: [],
                },
            ],
        },
    ],
)
