src/snapshots/prql__parser__parse_to_pest_tree-8.snap
---
source: src/parser.rs
assertion_line: 221
expression: "parse_to_pest_tree(r#\"# this is a comment\n        select a\"#, Rule::COMMENT)"

---
Ok(
    [],
)
