src/snapshots/prql__parser__parse_to_pest_tree_query.snap
---
source: src/parser.rs
assertion_line: 232
expression: "parse_to_pest_tree(r#\"\n    from employees\n    select [a, b]\n    \"#,\n                   Rule::query)"

---
Ok(
    [
        Pair {
            rule: pipeline,
            span: Span {
                str: "from employees\n    select [a, b]",
                start: 5,
                end: 37,
            },
            inner: [
                Pair {
                    rule: transformation,
                    span: Span {
                        str: "from employees",
                        start: 5,
                        end: 19,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "from",
                                start: 5,
                                end: 9,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "employees",
                                start: 10,
                                end: 19,
                            },
                            inner: [],
                        },
                    ],
                },
                Pair {
                    rule: transformation,
                    span: Span {
                        str: "select [a, b]",
                        start: 24,
                        end: 37,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "select",
                                start: 24,
                                end: 30,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: list,
                            span: Span {
                                str: "[a, b]",
                                start: 31,
                                end: 37,
                            },
                            inner: [
                                Pair {
                                    rule: list_item,
                                    span: Span {
                                        str: "a",
                                        start: 32,
                                        end: 33,
                                    },
                                    inner: [
                                        Pair {
                                            rule: ident,
                                            span: Span {
                                                str: "a",
                                                start: 32,
                                                end: 33,
                                            },
                                            inner: [],
                                        },
                                    ],
                                },
                                Pair {
                                    rule: list_item,
                                    span: Span {
                                        str: "b",
                                        start: 35,
                                        end: 36,
                                    },
                                    inner: [
                                        Pair {
                                            rule: ident,
                                            span: Span {
                                                str: "b",
                                                start: 35,
                                                end: 36,
                                            },
                                            inner: [],
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
        Pair {
            rule: EOI,
            span: Span {
                str: "",
                start: 42,
                end: 42,
            },
            inner: [],
        },
    ],
)
