src/snapshots/prql__parser__parse_transform-2.snap
---
source: src/parser.rs
assertion_line: 58
expression: "parse_transform(r#\"    from employees\"#)"

---
Ok(
    [
        Pair {
            rule: transform,
            span: Span {
                str: "    from employees",
                start: 0,
                end: 18,
            },
            inner: [
                Pair {
                    rule: ident,
                    span: Span {
                        str: "from",
                        start: 4,
                        end: 8,
                    },
                    inner: [],
                },
                Pair {
                    rule: terms,
                    span: Span {
                        str: "employees",
                        start: 9,
                        end: 18,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "employees",
                                start: 9,
                                end: 18,
                            },
                            inner: [],
                        },
                    ],
                },
            ],
        },
    ],
)
